Fixes for extra space

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -49,9 +49,6 @@ body {
   h1 {
     font-size: 30px;
   }
-  &.container-fluid {
-    padding-left: 85px;
-  }
 }
 
 .navbar {
@@ -322,6 +319,9 @@ body {
         }
       }
     }
+  }
+  + .container-fluid {
+    padding-left: 85px;
   }
 }
 
